IK: Align BTextView text rect/fix alignment

... while fixing problems caused by hrev54496.

Set fTextRect to bounds in _DoLayout().

Reduce left and right padding inside text views from full label
spacing to half label spacing. Unify padding between BTextControl
and BTextView.

Fixing padding also fixes right and center-aligned BTextViews.
Left-aligned text view's grow right, right-aligned ones grow left,
and center center aligned ones grow out.

Undo extra scrolling for non-left text views from hrev24130 fixing
a scrolling left and right with mouse bug when it shouldn't.

Reset fTextRect to bounds minus insets in _RecalculateLineBreaks().

Grow fTextRect based on alignment in _RecalculateLineBreaks().

Fixes #1651 #12608 #13796 #15189
Also fixes #16481 (regression from hrev54496.)

Other BTextView fixes:
* Replace max_c and min_c with std::max and std::min respectively.
* Remove scrolling from one instance of BTextView::SetText() as it
  produced undesired results while editing a scrolled text view.
* Add default insets in UpdateInsets()

Move fLayoutData->UpdateInsets() to private BTextView::_UpdateInsets()
because we need access to BTextView member variables when deciding
whether or not to add the default padding or not. Add default insets if
SetInsets() wasn't called and the text view is editable or selectable.

* Don't add insets if BTextView::SetInsets() is called.
* Do not set the right and bottom insets to left and top if negative,
set them to 0 like we do to left and top. Deskcalc bug otherwise.

Fixes #15688

TextControl Changes:
* Set text rect in BTextControl::DoLayout().
* Remove _AlignRect() from TextInput.

Fix the following problems in apps:

ScreenSaver: Set text rect in and PreviewView::AddPreview().
Tracker: Set "Edit name" text view insets to 2. Tweek text rect position
  to be on top of label in icon, mini-icon, and list mode. Add a TODO that
  the text rect is a pixel off from the name on some files.
WebPositive: Remove _AlignTextRect() and FrameResized() from URLTextView.
  Set insets on the text view to move it right of the globe more.
Mail: Remove _AlignTextRect() and FrameResized() from AddressTextControl.
  Use default insets on the text view, defaults are fine here.
Icon-O-Matic: Remove _CheckTextRect() and a no longer needed InsetBy()
  in TextInputValueView::FrameResized(). The width of the text rect is
  expanded to fit new content in BTextView already.

Fixes #16476 #16480 #16488 (regressions from hrev54496.)

Change-Id: Ifeca6077f8815ccd86d5a3880f99556298aaf0fe