src/apps/icon-o-matic/generic/gui/InputTextView.cpp
@@ -125,8 +125,6 @@ void
 InputTextView::Select(int32 start, int32 finish)
 {
 	BTextView::Select(start, finish);
-
-	_CheckTextRect();
 }
 
 // InsertText
@@ -135,8 +133,6 @@ InputTextView::InsertText(const char* inText, int32 inLength, int32 inOffset,
 						  const text_run_array* inRuns)
 {
 	BTextView::InsertText(inText, inLength, inOffset, inRuns);
-
-	_CheckTextRect();
 }
 
 // DeleteText
@@ -144,23 +140,4 @@ void
 InputTextView::DeleteText(int32 fromOffset, int32 toOffset)
 {
 	BTextView::DeleteText(fromOffset, toOffset);
-
-	_CheckTextRect();
-}
-
-// #pragma mark -
-
-// _CheckTextRect
-void
-InputTextView::_CheckTextRect()
-{
-	// update text rect and make sure
-	// the cursor/selection is in view
-	BRect textRect(TextRect());
-	float width = ceilf(StringWidth(Text()) + 2.0);
-	if (textRect.Width() != width) {
-		textRect.right = textRect.left + width;
-		SetTextRect(textRect);
-		ScrollToSelection();
-	}
 }
